Bug 1212366 - Part 1. Don't call SetAudioOutputVolume if stream is destroyed. r=roc